--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-DB_URL = "mongodb+srv://fumiya:RNICWm1Bl8ZATz0s@stocker.qwjzqd5.mongodb.net/?retryWrites=true&w=majority"
+DB_URI = "mongodb+srv://fumiya:RNICWm1Bl8ZATz0s@stocker.qwjzqd5.mongodb.net/?retryWrites=true&w=majority"
 PORT = 5000
