--- a/backend/package.json
+++ b/backend/package.json
@@ -6,23 +6,25 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "winstart": "WATCHPACK_POLLING=true react-scripts start",
-    "start": "node dist/app.js"
+    "start": "node dist/app.js",
+    "build": "tsc"
   },
   "author": "Fumiya Kitayama",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.4.0",
-    "body-parser": "^1.20.2",
+    "axios": "^1.7.7",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "mongodb": "^5.7.0",
-    "mongoose": "^7.3.2"
+    "mysql2": "^3.11.3",
+    "npm": "^10.9.0"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.13",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "typescript": "^5.6.2"
   }
 }
