--- a/docker/db/my.cnf
+++ b/docker/db/my.cnf
@@ -1,10 +1,15 @@
 [mysqld]
-character-set-server=utf8
-collation-server=utf8_general_ci
+character-set-server=utf8mb4
+collation-server=utf8mb4_unicode_ci
 default-time-zone = 'Asia/Tokyo'
+pid-file=/var/lib/mysql/mysqld.pid
+tls_version=TLSv1.2,TLSv1.3
+
 [client]
-default-character-set=utf8
+default-character-set=utf8mb4
+
 [mysql]
-default-character-set=utf8
+default-character-set=utf8mb4
+
 [mysqldump]
-default-character-set=utf8
+default-character-set=utf8mb4
