--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "stockers_frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://express-container:3001",
+  "proxy": "http://backend:3001",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -14,16 +14,13 @@
     "@types/jest": "^27.5.2",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
-    "axios": "^1.4.0",
+    "axios": "^1.7.7",
     "body-parser": "^1.20.2",
-    "express": "^4.18.2",
-    "mongodb": "^5.7.0",
-    "mongoose": "^7.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -53,7 +50,6 @@
     ]
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
     "@types/node": "^20.4.1"
   }
 }
