--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -2,7 +2,8 @@ FROM nginx:stable-alpine
 
 WORKDIR /var/www/html
 
-COPY . .
+COPY ./frontend/public /usr/share/nginx/html
+COPY ./backend /var/www/html
 COPY ./docker/nginx/default.conf /etc/nginx/conf.d/default.conf
 COPY ./docker/nginx/nginx.conf /etc/nginx/nginx.conf
 
