--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,8 +1,9 @@
 server {
     listen 80;
-    root /var/www/html/public;
-    index index.php index.html index.htm;
+    # root /var/www/html/public;
+    # index index.php index.html index.htm;
     server_name stockers-app;
+
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
 
@@ -28,8 +29,8 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    location /api/ {
-        proxy_pass http://stockers_backend:8000;
+    location /api {
+        proxy_pass http://stockers_backend:9000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
