--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -1,13 +1,14 @@
 FROM nginx:stable-alpine
 
-WORKDIR /var/www/html
-
-COPY ./frontend/public /usr/share/nginx/html
-COPY ./backend /var/www/html
 COPY ./docker/nginx/default.conf /etc/nginx/conf.d/default.conf
 COPY ./docker/nginx/nginx.conf /etc/nginx/nginx.conf
 
+WORKDIR /var/www/html
+
+COPY ./frontend /usr/share/nginx/html
+COPY ./backend /var/www/html
+
 RUN adduser -s /bin/sh -D -G www-data www-data
 
-RUN chmod -R 755 /var/www/html/
+RUN chmod -R 644 /var/www/html/
 RUN chown -R www-data:www-data /var/www/html/
