--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -22,6 +22,8 @@ server {
     fastcgi_buffer_size 32k;
 
     location / {
+        root /usr/share/nginx/html;  # 静的ファイルのルートを指定
+        try_files $uri $uri/ =404;
         proxy_pass http://stockers_frontend:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
