--- a/frontend bak/package.json
+++ b/frontend bak/package.json
@@ -8,19 +8,26 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.3",
+    "@svgr/plugin-svgo": "^8.1.0",
+    "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.7",
     "body-parser": "^1.20.2",
+    "css-select": "^5.1.0",
+    "nth-check": "^2.1.1",
+    "postcss": "^8.4.47",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-router-dom": "^6.14.1",
-    "react-scripts": "^3.0.1",
+    "react-router-dom": "^6.27.0",
+    "react-scripts": "^5.0.1",
+    "svgo": "^3.3.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
