--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
-    # root /var/www/html/public;
-    # index index.php index.html index.htm;
+    root /usr/src/app/public;
+    index index.php index.html index.htm;
     server_name stockers-app;
 
     error_log  /var/log/nginx/error.log;
@@ -21,22 +21,21 @@ server {
     fastcgi_buffers 16 16k;
     fastcgi_buffer_size 32k;
 
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+
     location / {
-        root /usr/share/nginx/html;  # 静的ファイルのルートを指定
-        try_files $uri $uri/ =404;
-        proxy_pass http://stockers_frontend:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_pass http://stockers_frontend:3000/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_cache_bypass $http_upgrade;
     }
 
     location /api {
-        proxy_pass http://stockers_backend:9000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_pass http://stockers_backend:9000/;
     }
 
     # 該当のファイルのキャッシュする
