開発環境を整える

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -33,7 +33,7 @@ http {
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
     # HTTPレスポンスを圧縮して転送
-    gzip  on;
+    gzip  off;
     gzip_disable "msie6";
 
     include /etc/nginx/conf.d/*.conf;
