--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,8 @@ services:
     build:
       context: .
       dockerfile: ./docker/react/Dockerfile
+    ports:
+      - "3001:3000"
     volumes:
       - ./frontend:/usr/src/app
       - react-data:/usr/src/app/node_modules
