--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
-    root /usr/src/app/public;
-    index index.php index.html index.htm;
+    #root /usr/src/app/public;
+    #index index.php index.html index.htm;
     server_name stockers-app;
 
     error_log  /var/log/nginx/error.log;
@@ -9,17 +9,17 @@ server {
 
     # タイムアウト対策
     # FastCGIと接続を確立するためのタイムアウトを設定：300s を指定
-    fastcgi_connect_timeout 300;
+    # fastcgi_connect_timeout 300;
     # FastCGIに要求を送信するためのタイムアウトを設定：300s を指定
-    fastcgi_send_timeout 300;
+    # fastcgi_send_timeout 300;
     # FastCGIからの応答を受信するためのタイムアウトを設定：300s を指定
-    fastcgi_read_timeout 300;
+    # fastcgi_read_timeout 300;
     # 要求を送信するためのタイムアウトを設定：300s を指定
-    send_timeout 300;
+    # send_timeout 300;
     # タイムアウト時間を設定：300s を指定
-    keepalive_timeout 300;
-    fastcgi_buffers 16 16k;
-    fastcgi_buffer_size 32k;
+    # keepalive_timeout 300;
+    # fastcgi_buffers 16 16k;
+    # fastcgi_buffer_size 32k;
 
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
@@ -27,7 +27,7 @@ server {
     proxy_set_header X-Forwarded-Proto $scheme;
 
     location / {
-        proxy_pass http://stockers_frontend:3000/;
+        proxy_pass http://stockers_frontend:3000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -35,7 +35,7 @@ server {
     }
 
     location /api {
-        proxy_pass http://stockers_backend:9000/;
+        proxy_pass http://stockers_backend:9000;
     }
 
     # 該当のファイルのキャッシュする
