--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -9,22 +9,17 @@ server {
 
     # タイムアウト対策
     # FastCGIと接続を確立するためのタイムアウトを設定：300s を指定
-    # fastcgi_connect_timeout 300;
+    fastcgi_connect_timeout 300;
     # FastCGIに要求を送信するためのタイムアウトを設定：300s を指定
-    # fastcgi_send_timeout 300;
+    fastcgi_send_timeout 300;
     # FastCGIからの応答を受信するためのタイムアウトを設定：300s を指定
-    # fastcgi_read_timeout 300;
+    fastcgi_read_timeout 300;
     # 要求を送信するためのタイムアウトを設定：300s を指定
-    # send_timeout 300;
+    send_timeout 300;
     # タイムアウト時間を設定：300s を指定
-    # keepalive_timeout 300;
-    # fastcgi_buffers 16 16k;
-    # fastcgi_buffer_size 32k;
-
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
+    keepalive_timeout 300;
+    fastcgi_buffers 16 16k;
+    fastcgi_buffer_size 32k;
 
     location / {
         proxy_pass http://stockers_frontend:3000;
@@ -36,6 +31,28 @@ server {
 
     location /api {
         proxy_pass http://stockers_backend:9000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        add_header 'Access-Control-Allow-Origin' 'http://localhost:3001';  # リクエスト元を指定
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';  # 許可するメソッドを指定
+        add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';  # 許可するヘッダーを指定
+
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Max-Age' 86400;  # プリフライトリクエストのキャッシュ時間
+            add_header 'Content-Type' 'text/plain; charset=utf-8';
+            add_header 'Content-Length' 0;
+            return 204;
+        }
+    }
+
+    location ~ \.php$ {
+        fastcgi_pass stockers_backend:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
     # 該当のファイルのキャッシュする
