--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -31,6 +31,14 @@ server {
 
     # バックエンド（Laravel API）
     location /api/ {
+        add_header 'Access-Control-Allow-Origin' 'http://localhost:3001';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-XSRF-TOKEN';
+        add_header 'Access-Control-Allow-Credentials' 'true';
+
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
         try_files $uri $uri/ /index.php?$query_string;
     }
 
