--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -22,7 +22,7 @@ server {
     fastcgi_buffer_size 32k;
 
     location / {
-        proxy_pass http://stockers_frontend:3000;
+        proxy_pass http://stockers_frontend:3001;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -32,7 +32,7 @@ server {
     # バックエンド（Laravel API）
     location /api/ {
         add_header 'Access-Control-Allow-Origin' 'http://localhost:3001';
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
         add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-XSRF-TOKEN';
         add_header 'Access-Control-Allow-Credentials' 'true';
 
