買い物リスト表示

--- a/docker/laravel/php.ini
+++ b/docker/laravel/php.ini
@@ -1,52 +1,52 @@
 [Date]
-date.timezone = "Asia/Tokyo" ; タイムゾーンを日本時間に設定
+date.timezone = "Asia/Tokyo"
 
 [mbstring]
-zend.multibyte = On ; マルチバイト文字のサポートを有効にする
-zend.script_encoding = UTF-8 ; スクリプトエンコーディングをUTF-8に設定
-mbstring.language = "Japanese" ; mbstringのデフォルト言語を日本語に設定
+zend.multibyte = On
+zend.script_encoding = UTF-8 -8に設定
+mbstring.language = "Japanese"
 
 [opcache]
-opcache.memory_consumption = 128 ; OPcacheに割り当てるメモリ量（MB）
-opcache.interned_strings_buffer = 8 ; Interned strings bufferのサイズ（MB）
-opcache.max_accelerated_files = 4000 ; 最大キャッシュファイル数
-opcache.revalidate_freq = 60 ; スクリプト変更のチェック頻度（秒）
-opcache.fast_shutdown = 1 ; スクリプト終了時の高速シャットダウンを有効にする
+opcache.memory_consumption = 128
+opcache.interned_strings_buffer = 8
+opcache.max_accelerated_files = 4000
+opcache.revalidate_freq = 60
+opcache.fast_shutdown = 1
 opcache.enable_cli = 0
 
 [xdebug]
-xdebug.mode = debug ; デバッグモードの有効化（コメントアウトしている場合は設定なし）
-xdebug.start_with_request = yes ; リクエスト開始時にXdebugを開始
-xdebug.discover_client_host = false ; クライアントホストを自動検出しない
-xdebug.client_host = "host.docker.internal" ; クライアントホストの設定（Docker環境の場合）
-xdebug.client_port = 9003 ; Xdebugのクライアントポート
-xdebug.idekey = "VSCODE" ; IDEキーの設定
-xdebug.log = "/var/log/xdebug.log" ; Xdebugのログファイルのパス
+xdebug.mode = debug
+xdebug.start_with_request = yes
+xdebug.discover_client_host = false
+xdebug.client_host = "host.docker.internal"
+xdebug.client_port = 9003
+xdebug.idekey = "VSCODE"
+xdebug.log = "/var/log/xdebug.log"
 
 [error_reporting]
-error_reporting = E_ERROR | E_WARNING | E_PARSE ; ログに記録するエラーのレベル
-display_errors = on; エラーをブラウザに表示しない
-log_errors = on; エラーをログに記録する
-error_log = /var/log/php_errors.log; エラーログのファイルパス
+error_reporting = E_ERROR | E_WARNING | E_PARSE
+display_errors = on
+log_errors = on
+error_log = /var/log/php_errors.log
 
 [memory_limit]
-memory_limit = 256M ; PHPスクリプトが使用できる最大メモリ量
+memory_limit = 256M
 
 [max_execution_time]
-max_execution_time = 30 ; スクリプトの最大実行時間（秒）
+max_execution_time = 30
 
 [upload_max_filesize]
-upload_max_filesize = 50M ; アップロード可能なファイルの最大サイズ
+upload_max_filesize = 50M
 
 [post_max_size]
-post_max_size = 50M ; POSTリクエストで送信できる最大データ量
+post_max_size = 50M
 
 [session]
-session.use_strict_mode = On ; セッションIDの生成時にセキュリティを強化
-session.use_only_cookies = On ; セッションIDをクッキーのみに制限
-session.cookie_secure = On ; HTTPS接続でのみクッキーを送信
-session.cookie_httponly = On ; JavaScriptからクッキーにアクセスできないようにする
-session.cookie_samesite = Strict ; クロスサイトリクエストフォージェリ攻撃を防ぐ
+session.use_strict_mode = On
+session.use_only_cookies = On
+session.cookie_secure = On
+session.cookie_httponly = On
+session.cookie_samesite = Strict
 
 [allow_url_fopen]
-allow_url_fopen = Off ; 外部URLへのファイルアクセスを無効にする
+allow_url_fopen = Off
