--- a/docker/laravel/www.conf
+++ b/docker/laravel/www.conf
@@ -1,6 +1,11 @@
 listen = 0.0.0.0:9000
 pm = dynamic
-pm.max_children = 5
-pm.start_servers = 2
-pm.min_spare_servers = 1
-pm.max_spare_servers = 3
+pm.max_children = 10
+pm.start_servers = 3
+pm.min_spare_servers = 2
+pm.max_spare_servers = 5
+pm.max_requests = 500
+
+php_flag[log_errors] = on
+php_admin_value[error_log] = /var/log/php-fpm/error.log
+catch_workers_output = yes
