--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,7 +1,5 @@
 server {
     listen 80;
-    root /var/www/html/public;
-    index index.php index.html index.htm;
     server_name localhost;
 
     error_log  /var/log/nginx/error.log;
@@ -22,37 +20,36 @@ server {
     fastcgi_buffer_size 32k;
 
     location / {
-        proxy_pass http://stockers_frontend:3001;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_cache_bypass $http_upgrade;
+        proxy_pass http://frontend:3000;  # frontend コンテナの 3000 番ポート
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
     # バックエンド（Laravel API）
     location /api/ {
-        add_header 'Access-Control-Allow-Origin' 'http://localhost:3001';
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
-        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-XSRF-TOKEN';
-        add_header 'Access-Control-Allow-Credentials' 'true';
+        root /var/www/html/public;
+        index index.php;
+        try_files $uri /index.php$is_args$args;
 
-        if ($request_method = 'OPTIONS') {
-            return 204;
-        }
-        try_files $uri $uri/ /index.php?$query_string;
-    }
-
-    location ~ \.php$ {
+        # FastCGI（PHP-FPM）にリクエストを転送
         fastcgi_pass backend:9000;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_script_name;
+        fastcgi_param PATH_TRANSLATED $document_root$fastcgi_script_name;
     }
 
     # 該当のファイルのキャッシュする
     location ~* \.(css|js|ttf|woff|woff2|png|jpg|jpeg|gif)$ {
         expires max;
         add_header Cache-Control public;
+    }
+
+    # セキュリティ対策：.htaccess, .git, .env などへのアクセス制限
+    location ~ /\. {
+        deny all;
     }
 
     location ~ /\.ht {
