--- a/docker/laravel/php.ini
+++ b/docker/laravel/php.ini
@@ -3,7 +3,7 @@ date.timezone = "Asia/Tokyo"
 
 [mbstring]
 zend.multibyte = On
-zend.script_encoding = UTF-8 -8に設定
+zend.script_encoding = UTF-8
 mbstring.language = "Japanese"
 
 [opcache]
