--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -5,40 +5,47 @@ server {
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
 
-    # タイムアウト対策
-    # FastCGIと接続を確立するためのタイムアウトを設定：300s を指定
-    fastcgi_connect_timeout 300;
-    # FastCGIに要求を送信するためのタイムアウトを設定：300s を指定
-    fastcgi_send_timeout 300;
-    # FastCGIからの応答を受信するためのタイムアウトを設定：300s を指定
-    fastcgi_read_timeout 300;
-    # 要求を送信するためのタイムアウトを設定：300s を指定
-    send_timeout 300;
-    # タイムアウト時間を設定：300s を指定
-    keepalive_timeout 300;
-    fastcgi_buffers 16 16k;
-    fastcgi_buffer_size 32k;
-
     location / {
-        proxy_pass http://frontend:3000;  # frontend コンテナの 3000 番ポート
+        proxy_pass http://stockers_frontend:3000;  # frontend コンテナの 3000 番ポート
+        proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
+    # 本番環境で書き換え
+    # location / {
+    #     root /usr/share/nginx/html;
+    #     index index.html;
+    #     try_files $uri /index.html;
+    # }
+
     # バックエンド（Laravel API）
     location /api/ {
-        root /var/www/html/public;
-        index index.php;
-        try_files $uri /index.php$is_args$args;
-
-        # FastCGI（PHP-FPM）にリクエストを転送
-        fastcgi_pass backend:9000;
+        fastcgi_pass stockers_backend:9000;
         fastcgi_index index.php;
         include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param SCRIPT_FILENAME /var/www/html/public/index.php;
         fastcgi_param PATH_INFO $fastcgi_script_name;
-        fastcgi_param PATH_TRANSLATED $document_root$fastcgi_script_name;
+
+        add_header 'Access-Control-Allow-Origin' 'http://localhost:3001' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-XSRF-TOKEN' always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
+
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
+    location ~ \.php$ {
+        fastcgi_pass stockers_backend:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME /var/www/html/public/index.php;
+        fastcgi_param PATH_INFO $fastcgi_script_name;
     }
 
     # 該当のファイルのキャッシュする
