--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,8 @@
       "hostname": "0.0.0.0",
       "pathMappings": {
         "/var/www/html": "${workspaceFolder}/backend"
-      }
+      },
+      "log": true
     }
   ]
 }
