--- a/docker/laravel/php.ini
+++ b/docker/laravel/php.ini
@@ -18,7 +18,7 @@ opcache.enable_cli = 0
 xdebug.mode = debug
 xdebug.start_with_request = yes
 xdebug.discover_client_host = false
-xdebug.client_host = "host.docker.internal"
+xdebug.client_host = 172.17.0.1
 xdebug.client_port = 9003
 xdebug.idekey = "VSCODE"
 xdebug.log = "/var/log/xdebug.log"
