環境構築完了

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,8 @@ services:
       - REDIS_HOST=${REDIS_HOST}
       - REDIS_PORT=${REDIS_PORT}
     volumes:
-      - ./php:/var/www/html
+      - ./htdocs:/var/www/html
+      - ./htdocs/node_modules:/var/www/html/node_modules
     working_dir: /var/www/html
     tty: true
     depends_on:
