--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -8,7 +8,7 @@ server {
 
     # バックエンド（Laravel API）
     location / {
-        fastcgi_pass uchistock-backend:9000;
+        fastcgi_pass uchistock-app:9000;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME /var/www/html/public/index.php;
@@ -18,7 +18,7 @@ server {
     }
 
     location ~ \.php$ {
-        fastcgi_pass uchistock-backend:9000;
+        fastcgi_pass uchistock-app:9000;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME /var/www/html/public/index.php;
