--- a/.env
+++ b/.env
@@ -1,9 +1,12 @@
+# データベース
 DB_CONNECTION=mysql
 DB_HOST=uchistock-db
 DB_PORT=3306
 DB_DATABASE=uchistock-db
-DB_USERNAME=root
+DB_USERNAME=db-user
 DB_PASSWORD=password
 TZ=Asia/Tokyo
+NODE_ENV=local
+# redis
 REDIS_HOST=uchistock-redis
 REDIS_PORT=6379
