livewireインストール

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -26,13 +26,20 @@ server {
     }
 
     # 該当のファイルのキャッシュする
-    location ~* \.(css|js|ttf|woff|woff2|png|jpg|jpeg|gif)$ {
-        expires max;
-        add_header Cache-Control public;
+    location ~* \.(css|gif|ico|jpeg|jpg|js|png|svg|webp|woff2)$ {
+        expires 7d;
+        add_header Cache-Control "public, no-transform";
+
+        try_files $uri =404;
     }
 
     # セキュリティ対策：.htaccess, .git, .env などへのアクセス制限
     location ~ /\.(git|env|htaccess|htpasswd|DS_Store|vscode|idea|log) {
         deny all;
+    }
+
+    location = /livewire/livewire.js {
+        expires off;
+        try_files $uri $uri/ /index.php?$query_string;
     }
 }
