--- a/htdocs/composer.json
+++ b/htdocs/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/socialite": "^5.16",
         "laravel/tinker": "^2.8",
+        "livewire/livewire": "^3.6",
         "socialiteproviders/line": "^4.1"
     },
     "require-dev": {
