--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -2,18 +2,13 @@ server {
     listen 80;
     server_name localhost;
     index index.php index.html index.htm;
+    root /var/www/html/public;
 
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
 
     # バックエンド（Laravel API）
     location / {
-        fastcgi_pass uchistock-app:9000;
-        fastcgi_index index.php;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME /var/www/html/public/index.php;
-        fastcgi_param PATH_INFO $fastcgi_script_name;
-
         try_files $uri $uri/ /index.php?$query_string;
     }
 
@@ -27,19 +22,11 @@ server {
 
     # 該当のファイルのキャッシュする
     location ~* \.(css|gif|ico|jpeg|jpg|js|png|svg|webp|woff2)$ {
-        expires 7d;
-        add_header Cache-Control "public, no-transform";
-
         try_files $uri =404;
     }
 
     # セキュリティ対策：.htaccess, .git, .env などへのアクセス制限
     location ~ /\.(git|env|htaccess|htpasswd|DS_Store|vscode|idea|log) {
         deny all;
-    }
-
-    location = /livewire/livewire.js {
-        expires off;
-        try_files $uri $uri/ /index.php?$query_string;
     }
 }
