--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -34,6 +34,12 @@ http {
     add_header Cache-Control "no-cache, no-store, must-revalidate";
     add_header Pragma "no-cache";
     add_header Expires 0;
+    add_header Content-Security-Policy "default-src 'self';
+        script-src 'self' 'unsafe-inline' 'unsafe-eval' http://localhost:5173;
+        style-src 'self' 'unsafe-inline' https://fonts.bunny.net;
+        font-src 'self' https://fonts.bunny.net;
+        connect-src 'self' ws://localhost:5173;
+    ";
 
     # HTTPレスポンスを圧縮して転送
     gzip on;
