--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -39,6 +39,7 @@ http {
         style-src 'self' 'unsafe-inline' https://fonts.bunny.net;
         font-src 'self' https://fonts.bunny.net;
         connect-src 'self' ws://localhost:5173;
+        img-src 'self' data:;
     ";
 
     # HTTPレスポンスを圧縮して転送
