ログインデザイン修正

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -38,7 +38,7 @@ http {
         script-src 'self' 'unsafe-inline' 'unsafe-eval' http://localhost:5173;
         style-src 'self' 'unsafe-inline' https://fonts.bunny.net;
         font-src 'self' https://fonts.bunny.net;
-        connect-src 'self' ws://localhost:5173;
+        connect-src 'self' ws://localhost:5173  https://access.line.me;
         img-src 'self' data:;
     ";
 
