--- a/htdocs/package.json
+++ b/htdocs/package.json
@@ -25,6 +25,7 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "react-icons": "^5.5.0",
         "react-toastify": "^11.0.5"
     }
 }
