--- a/htdocs/.env.example
+++ b/htdocs/.env.example
@@ -1,10 +1,10 @@
-APP_NAME=Laravel
+APP_NAME="UCHI STOCK"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8080
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=daily
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
