--- a/htdocs/.env.example
+++ b/htdocs/.env.example
@@ -57,3 +57,8 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+LINE_CLIENT_ID=
+LINE_CLIENT_SECRET=
+LINE_REDIRECT_URI=
+LINE_BOT_CHANNEL_ACCESS_TOKEN=
