改修：whisper起動確認

--- a/docker/whisper/Dockerfile
+++ b/docker/whisper/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /usr/src/app
 RUN apt-get update && apt-get install -y ffmpeg git && rm -rf /var/lib/apt/lists/*
 
 # Python依存
-RUN pip install --no-cache-dir fastapi uvicorn openai-whisper
+RUN pip install --no-cache-dir fastapi uvicorn openai-whisper python-multipart
 
 # ソースコードをコピー
 COPY ./whisper/* ./
