--- a/htdocs/.env.example
+++ b/htdocs/.env.example
@@ -52,13 +52,18 @@ PUSHER_SCHEME=https
 PUSHER_APP_CLUSTER=mt1
 
 VITE_APP_NAME="${APP_NAME}"
+VITE_API_URL="${APP_URL}"
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
+#  LINE認証設定
 LINE_CLIENT_ID=
 LINE_CLIENT_SECRET=
 LINE_REDIRECT_URI=
 LINE_BOT_CHANNEL_ACCESS_TOKEN=
+
+# whisperサーバーURL
+WHISPER_URL=
