改修：リンター導入

--- a/htdocs/.env.example
+++ b/htdocs/.env.example
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=uchistock-db
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=uchistock-db
+DB_USERNAME=db-user
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -24,7 +24,7 @@ SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=uchistock-redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -66,4 +66,4 @@ LINE_REDIRECT_URI=
 LINE_BOT_CHANNEL_ACCESS_TOKEN=
 
 # whisperサーバーURL
-WHISPER_URL=
+WHISPER_URL="http://whisper:5000/transcribe"
