改修：whisper関連削除

--- a/htdocs/.env.example
+++ b/htdocs/.env.example
@@ -66,4 +66,4 @@ LINE_REDIRECT_URI=
 LINE_BOT_CHANNEL_ACCESS_TOKEN=
 
 # whisperサーバーURL
-WHISPER_URL="http://whisper:5000/transcribe"
+WHISPER_URL="http://voice-analyzer-api:5001/transcribe"
