--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,21 +78,9 @@ services:
     networks:
       - uchistock_network
 
-  whisper:
-    container_name: uchistock-whisper
-    build:
-      context: .
-      dockerfile: ./docker/whisper/Dockerfile
-    ports:
-      - "5001:5000"
-    volumes:
-      - ./whisper:/usr/src/app
-    networks:
-      - uchistock_network
-
 networks:
   uchistock_network:
-    driver: bridge
+    external: true
 
 volumes:
   mysql_data:
